Fix persistence issues